{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 14,
  "lineage": "723110a9-214b-0349-c445-df5c5680cb12",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-15T12:43:50.872-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deep-tracer-456420-i0/global/firewalls/default-allow-http-https",
            "log_config": [],
            "name": "default-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-tracer-456420-i0/global/networks/default",
            "priority": 1000,
            "project": "deep-tracer-456420-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-tracer-456420-i0/global/firewalls/default-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-node",
              "http-server",
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_monitoring",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9090",
                  "3000",
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-15T12:43:50.748-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deep-tracer-456420-i0/global/firewalls/default-allow-monitoring",
            "log_config": [],
            "name": "default-allow-monitoring",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-tracer-456420-i0/global/networks/default",
            "priority": 1000,
            "project": "deep-tracer-456420-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-tracer-456420-i0/global/firewalls/default-allow-monitoring",
            "source_ranges": [
              "45.119.28.27/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "monitoring-ports"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-10T13:39:54.052-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/deep-tracer-456420-i0/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/deep-tracer-456420-i0/global/networks/default",
            "priority": 1000,
            "project": "deep-tracer-456420-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/deep-tracer-456420-i0/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "45.119.28.27/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}